traversal.zigzag.traversalzigzag.TraversalZigZag.scala.error
Compilation error:
TraversalZigZag:21: error: value ecritMessage is not a member of Unit
marche()ecritMessage(48);} 
        ^